--- a/packages/extension/popup/popup.html
+++ b/packages/extension/popup/popup.html
@@ -319,6 +319,7 @@
         </div>
     </div>
 
+    <script src="../assets/qrcode.min.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
